--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -39,10 +39,33 @@
   font-style: normal;
 }
 
+@font-face {
+  font-family: "Exo2-Bold";
+  src: url("../fonts/Exo2-Bold.eot?#iefix") format("embedded-opentype"),
+    url("../fonts/Exo2-Bold.otf") format("opentype"),
+    url("../fonts/Exo2-Bold.woff") format("woff"),
+    url("../fonts/Exo2-Bold.ttf") format("truetype"),
+    url("../fonts/Exo2-Bold.svg#Exo2-Bold") format("svg");
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Exo2-Regular";
+  src: url("../fonts/Exo2-Regular.eot?#iefix") format("embedded-opentype"),
+    url("../fonts/Exo2-Regular.otf") format("opentype"),
+    url("../fonts/Exo2-Regular.woff") format("woff"),
+    url("../fonts/Exo2-Regular.ttf") format("truetype"),
+    url("../fonts/Exo2-Regular.svg#Exo2-Regular") format("svg");
+  font-weight: normal;
+  font-style: normal;
+}
+
 body {
   margin: 0;
   padding: 0;
   color: #fff;
+  background: #1e232a;
 }
 
 a,
@@ -71,8 +94,20 @@ h6 {
   padding: 0;
 }
 
+select,
+input {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  outline: none;
+  border: none;
+  font-family: "Exo2-Regular";
+  font-size: 16px;
+}
+
 .container {
   display: flex;
+  position: relative;
   align-items: center;
   width: 80%;
   height: 100%;
@@ -122,17 +157,22 @@ h6 {
 .contacts {
   display: flex;
   align-items: center;
-  margin-left: 100px;
+  a {
+    margin-left: 20px;
+    svg:hover {
+      fill: #787d89;
+      webkit-transition: all 0.5s ease-out;
+      -moz-transition: all 0.5s ease-out;
+      -ms-transition: all 0.5s ease-out;
+      -o-transition: all 0.5s ease-out;
+      transition: all 0.5s ease-out;
+    }
+  }
 }
 .phone_number {
   font-family: "Exo2-Medium", sans-serif;
   font-size: 16px;
   margin-right: 40px;
-}
-.social__icon {
-  width: 20px;
-  height: 20px;
-  margin-left: 20px;
 }
 
 .advert {
@@ -168,4 +208,77 @@ h6 {
     font-family: "Exo2-SemiBold", sans-serif;
     font-size: 16px;
   }
+}
+
+.form {
+  display: flex;
+  position: absolute;
+  right: -364px;
+  bottom: -100px;
+  flex-direction: column;
+  position: relative;
+
+  background: #fff;
+  padding: 40px;
+  span {
+    color: #1e2229;
+    font-family: "Exo2-Bold", sans-serif;
+    font-size: 11px;
+  }
+  input,
+  select {
+    width: 320px;
+    height: 35px;
+  }
+  label {
+    font-family: "Exo2-Regular", sans-serif;
+    font-size: 16px;
+    color: #1e232a;
+    margin-left: 50px;
+  }
+
+  label::before {
+    content: "";
+    position: absolute;
+    display: inline-block;
+    left: 40px;
+    height: 30px;
+    width: 30px;
+    background: #ebecee;
+  }
+
+  label::after {
+    content: "";
+    position: absolute;
+    left: 40px;
+    display: inline-block;
+    height: 30px;
+    width: 30px;
+    background: url(../img/check-mark-blue.svg) no-repeat;
+    background-size: cover;
+  }
+  div {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 15px;
+    border: 1px solid #dddedf;
+    padding: 15px 20px;
+  }
+
+  input[type="submit"] {
+    margin-top: 20px;
+    background: #2889f0;
+    width: 100%;
+    height: 60px;
+    color: #fff;
+    cursor: pointer;
+  }
+}
+
+input[type="checkbox"] + label::after {
+  content: none;
+}
+
+input[type="checkbox"]:checked + label::after {
+  content: "";
 }
