--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -77,15 +77,15 @@ input {
   display: flex;
   position: relative;
   align-items: center;
-  width: 80%;
-  height: 100%; }
+  width: 80%; }
 
 #first {
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
   background: url(../img/hero.jpg) no-repeat;
-  background-size: cover; }
+  background-size: cover;
+  height: 660px; }
   #first header {
     display: flex;
     justify-content: space-between;
@@ -164,10 +164,9 @@ input {
 .form {
   display: flex;
   position: absolute;
-  right: -364px;
+  right: 0;
   bottom: -100px;
   flex-direction: column;
-  position: relative;
   background: #fff;
   padding: 40px; }
   .form span {
