--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -91,8 +91,7 @@ input {
     justify-content: space-between;
     position: relative;
     width: 100%;
-    height: 10vh;
-    padding-top: 20px; }
+    height: 10vh; }
 
 .logo {
   position: absolute;
@@ -102,13 +101,19 @@ input {
   display: flex;
   flex-wrap: wrap;
   align-items: center;
-  margin-left: 150px;
   width: 500px; }
 
 .menu__item {
   font-family: "Oswald-Regular", sans-serif;
   font-size: 16px;
   margin-left: 40px; }
+  .menu__item a:hover {
+    color: #787d89;
+    webkit-transition: all 0.5s ease-out;
+    -moz-transition: all 0.5s ease-out;
+    -ms-transition: all 0.5s ease-out;
+    -o-transition: all 0.5s ease-out;
+    transition: all 0.5s ease-out; }
 
 .menu__item:nth-child(6) {
   margin-left: 53px; }
@@ -132,7 +137,7 @@ input {
 .phone_number {
   font-family: "Exo2-Medium", sans-serif;
   font-size: 16px;
-  margin-right: 40px; }
+  margin-right: 20px; }
 
 .advert {
   display: flex;
@@ -181,7 +186,7 @@ input {
     font-family: "Exo2-Regular", sans-serif;
     font-size: 16px;
     color: #1e232a;
-    margin-left: 50px; }
+    margin: 10px 0 15px 50px; }
   .form label::before {
     content: "";
     position: absolute;
@@ -212,6 +217,18 @@ input {
     height: 60px;
     color: #fff;
     cursor: pointer; }
+
+.confirm_label::before {
+  content: "";
+  position: absolute;
+  display: inline-block;
+  left: 40px;
+  height: 20px;
+  width: 20px;
+  background: #ebecee; }
+
+input[type="checkbox"] {
+  display: none; }
 
 input[type="checkbox"] + label::after {
   content: none; }
