--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -125,7 +125,6 @@ input {
     position: relative;
     width: 100%;
     height: 10vh;
-    padding-top: 20px;
   }
 }
 
@@ -138,7 +137,6 @@ input {
   display: flex;
   flex-wrap: wrap;
   align-items: center;
-  margin-left: 150px;
   width: 500px;
 }
 
@@ -146,6 +144,15 @@ input {
   font-family: "Oswald-Regular", sans-serif;
   font-size: 16px;
   margin-left: 40px;
+
+  a:hover {
+    color: #787d89;
+    webkit-transition: all 0.5s ease-out;
+    -moz-transition: all 0.5s ease-out;
+    -ms-transition: all 0.5s ease-out;
+    -o-transition: all 0.5s ease-out;
+    transition: all 0.5s ease-out;
+  }
 }
 
 .menu__item:nth-child(6) {
@@ -172,7 +179,7 @@ input {
 .phone_number {
   font-family: "Exo2-Medium", sans-serif;
   font-size: 16px;
-  margin-right: 40px;
+  margin-right: 20px;
 }
 
 .advert {
@@ -232,7 +239,7 @@ input {
     font-family: "Exo2-Regular", sans-serif;
     font-size: 16px;
     color: #1e232a;
-    margin-left: 50px;
+    margin: 10px 0 15px 50px;
   }
 
   label::before {
@@ -271,6 +278,18 @@ input {
     color: #fff;
     cursor: pointer;
   }
+}
+.confirm_label::before {
+  content: "";
+  position: absolute;
+  display: inline-block;
+  left: 40px;
+  height: 20px;
+  width: 20px;
+  background: #ebecee;
+}
+input[type="checkbox"] {
+  display: none;
 }
 
 input[type="checkbox"] + label::after {
