--- a/src/css/settings.scss
+++ b/src/css/settings.scss
@@ -61,6 +61,16 @@
   font-style: normal;
 }
 
+@font-face {
+  font-family: "Oswald-Light";
+  src: url("../fonts/Oswald-Light.eot?#iefix") format("embedded-opentype"),
+    url("../fonts/Oswald-Light.woff") format("woff"),
+    url("../fonts/Oswald-Light.ttf") format("truetype"),
+    url("../fonts/Oswald-Light.svg#Oswald-Light") format("svg");
+  font-weight: normal;
+  font-style: normal;
+}
+
 body {
   margin: 0;
   padding: 0;
