--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -34,6 +34,12 @@
   font-weight: normal;
   font-style: normal; }
 
+@font-face {
+  font-family: "Oswald-Light";
+  src: url("../fonts/Oswald-Light.eot?#iefix") format("embedded-opentype"), url("../fonts/Oswald-Light.woff") format("woff"), url("../fonts/Oswald-Light.ttf") format("truetype"), url("../fonts/Oswald-Light.svg#Oswald-Light") format("svg");
+  font-weight: normal;
+  font-style: normal; }
+
 body {
   margin: 0;
   padding: 0;
@@ -78,14 +84,17 @@ input[type="checkbox"] {
 
 .container {
   display: flex;
+  flex-wrap: wrap;
   position: relative;
   align-items: center;
   width: 80%; }
 
-#first {
+section {
   display: flex;
   justify-content: center;
-  flex-wrap: wrap;
+  flex-wrap: wrap; }
+
+#first {
   background: url(../img/hero.jpg) no-repeat;
   background-size: cover;
   height: 660px; }
@@ -148,19 +157,18 @@ input[type="checkbox"] {
   .advert ul {
     display: flex;
     justify-content: space-between; }
-
-.advert__items {
-  display: flex;
-  flex-direction: column;
-  width: 25%; }
-  .advert__items img {
-    width: 40px;
-    height: 40px; }
-  .advert__items span {
-    display: inline-block;
-    padding-top: 50px;
-    font-family: "Exo2-SemiBold", sans-serif;
-    font-size: 16px; }
+  .advert .advert__items {
+    display: flex;
+    flex-direction: column;
+    width: 25%; }
+    .advert .advert__items img {
+      width: 40px;
+      height: 40px; }
+    .advert .advert__items span {
+      display: inline-block;
+      padding-top: 50px;
+      font-family: "Exo2-SemiBold", sans-serif;
+      font-size: 16px; }
 
 .form {
   display: flex;
@@ -240,4 +248,71 @@ input[type="checkbox"] {
     content: ""; }
 
 #second {
+  display: flex;
   height: 950px; }
+  #second .offer_type {
+    display: flex;
+    width: 100%;
+    height: 70px;
+    justify-content: center;
+    padding-top: 200px; }
+    #second .offer_type li {
+      padding: 50px; }
+    #second .offer_type a {
+      font-family: "Oswald-Light", sans-serif;
+      font-size: 16px;
+      color: #888a8c;
+      text-transform: uppercase; }
+    #second .offer_type a:active,
+    #second .offer_type a:hover {
+      color: #d3d4d5; }
+  #second .vertical {
+    flex-direction: column; }
+  #second .car_illustration {
+    position: relative;
+    height: 700px;
+    width: 100%;
+    background: linear-gradient(rgba(30, 35, 42, 0.8), rgba(30, 35, 42, 0.8)), url(../img/car.png) no-repeat center;
+    font-family: "Exo2-Regular", sans-serif; }
+    #second .car_illustration .car_pointer {
+      position: absolute;
+      display: flex;
+      align-items: baseline; }
+      #second .car_illustration .car_pointer div {
+        margin-bottom: 20px;
+        margin-right: 20px; }
+      #second .car_illustration .car_pointer:nth-child(1) {
+        left: 10%;
+        bottom: 338px; }
+      #second .car_illustration .car_pointer:nth-child(2) {
+        top: 90px;
+        left: 40%; }
+      #second .car_illustration .car_pointer:nth-child(3) {
+        top: 133px;
+        right: 21%; }
+      #second .car_illustration .car_pointer:nth-child(4) {
+        top: 160px;
+        right: 11%; }
+        #second .car_illustration .car_pointer:nth-child(4) div {
+          width: 100px; }
+      #second .car_illustration .car_pointer:nth-child(5) {
+        bottom: 149px;
+        left: 11%; }
+      #second .car_illustration .car_pointer:nth-child(6) {
+        bottom: 212px;
+        left: 36%; }
+      #second .car_illustration .car_pointer:nth-child(7) {
+        bottom: 144px;
+        right: 34%; }
+    #second .car_illustration .wrap {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: flex-end;
+      width: 150px; }
+    #second .car_illustration h3 {
+      font-size: 14px;
+      font-weight: 200; }
+    #second .car_illustration span {
+      font-size: 16px; }
+    #second .car_illustration .svg {
+      padding: 0 0 0 50px; }
