--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -255,8 +255,7 @@ section {
     display: flex;
     width: 100%;
     height: 70px;
-    justify-content: center;
-    padding-top: 200px; }
+    justify-content: center; }
     #second .offer_type li {
       padding: 50px; }
     #second .offer_type a {
@@ -269,6 +268,11 @@ section {
       color: #d3d4d5; }
   #second .vertical {
     flex-direction: column; }
+  #second .car_wrap {
+    width: 960px;
+    height: 540px;
+    position: relative;
+    margin: 0 auto; }
   #second .car_illustration {
     position: relative;
     height: 700px;
@@ -283,28 +287,28 @@ section {
         margin-bottom: 20px;
         margin-right: 20px; }
       #second .car_illustration .car_pointer:nth-child(1) {
-        left: 10%;
-        bottom: 338px; }
+        left: 47px;
+        bottom: 336px; }
       #second .car_illustration .car_pointer:nth-child(2) {
         top: 90px;
-        left: 40%; }
+        left: 375px; }
       #second .car_illustration .car_pointer:nth-child(3) {
-        top: 133px;
-        right: 21%; }
+        top: 139px;
+        right: 169px; }
       #second .car_illustration .car_pointer:nth-child(4) {
         top: 160px;
-        right: 11%; }
+        right: 83px; }
         #second .car_illustration .car_pointer:nth-child(4) div {
           width: 100px; }
       #second .car_illustration .car_pointer:nth-child(5) {
-        bottom: 149px;
-        left: 11%; }
+        bottom: 132px;
+        left: 54px; }
       #second .car_illustration .car_pointer:nth-child(6) {
         bottom: 212px;
-        left: 36%; }
+        left: 346px; }
       #second .car_illustration .car_pointer:nth-child(7) {
         bottom: 144px;
-        right: 34%; }
+        right: 304px; }
     #second .car_illustration .wrap {
       display: flex;
       flex-wrap: wrap;
