--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -216,7 +216,6 @@ section {
     width: 100%;
     height: 70px;
     justify-content: center;
-    padding-top: 200px;
     li {
       padding: 50px;
     }
@@ -236,7 +235,12 @@ section {
   .vertical {
     flex-direction: column;
   }
-
+  .car_wrap {
+    width: 960px;
+    height: 540px;
+    position: relative;
+    margin: 0 auto;
+  }
   .car_illustration {
     position: relative;
     height: 700px;
@@ -253,35 +257,35 @@ section {
         margin-right: 20px;
       }
       &:nth-child(1) {
-        left: 10%;
-        bottom: 338px;
+        left: 47px;
+        bottom: 336px;
       }
       &:nth-child(2) {
         top: 90px;
-        left: 40%;
+        left: 375px;
       }
       &:nth-child(3) {
-        top: 133px;
-        right: 21%;
+        top: 139px;
+        right: 169px;
       }
       &:nth-child(4) {
         div {
           width: 100px;
         }
         top: 160px;
-        right: 11%;
+        right: 83px;
       }
       &:nth-child(5) {
-        bottom: 149px;
-        left: 11%;
+        bottom: 132px;
+        left: 54px;
       }
       &:nth-child(6) {
         bottom: 212px;
-        left: 36%;
+        left: 346px;
       }
       &:nth-child(7) {
         bottom: 144px;
-        right: 34%;
+        right: 304px;
       }
     }
     .wrap {
