--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -306,3 +306,83 @@ section {
     }
   }
 }
+
+.price_packages_label {
+  position: relative;
+  width: 342px;
+  height: 70px;
+  margin: 0 auto;
+  text-align: center;
+  margin-top: 50px;
+  h1 {
+    font-family: "Oswald-Regular", sans-serif;
+    font-size: 36px;
+    text-transform: uppercase;
+    font-weight: 300;
+    line-height: 1.8;
+  }
+  svg {
+    position: absolute;
+    top: 0;
+    left: 0;
+  }
+}
+
+.price_packages {
+  display: flex;
+  width: 100%;
+  justify-content: space-around;
+  margin-top: 75px;
+  .block_wrap {
+    position: relative;
+  }
+  .price_packages_item {
+    text-align: center;
+    width: 360px;
+    height: 600px;
+    font-family: "Exo2-Regular", sans-serif;
+    border: 2px #353940 solid;
+
+    h2 {
+      font-family: "Exo2-Bold", sans-serif;
+      font-size: 18px;
+      font-weight: normal;
+      padding-top: 35px;
+    }
+    h3 {
+      font-size: 16px;
+      color: #aaabad;
+      font-weight: normal;
+      padding-top: 15px;
+    }
+    h4 {
+      font-size: 22px;
+      color: #ff4657;
+      padding: 30px 0 20px 0;
+    }
+    p {
+      margin: 0;
+    }
+
+    li {
+      padding-top: 9px;
+    }
+    li.item::after {
+      content: " ";
+      display: inline-block;
+      width: 90px;
+      border-bottom: 1px #353940 solid;
+    }
+
+    a {
+      width: 140px;
+      height: 45px;
+      position: absolute;
+      bottom: -20px;
+      left: 115px;
+      background: #ffffff;
+      color: #1e232a;
+      line-height: 2.5;
+    }
+  }
+}
